allow cells for all views to be clickable by creating a cell class

--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -33,5 +33,6 @@
 {% endblock content %}
 
 {% block scripts %}
-{{ super() }}
+    {{ super() }}
+    <script src="{{ url_for('static', filename = 'javascript/calendar/cells.js')}}"></script>
 {% endblock scripts %}
