--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -47,7 +47,7 @@
                             {% else %}
                                 <td class="text-center" style = "width: 5em;"> {{i}}:00</td>
                             {% endif %}
-                            <td>events go here</td>
+                            <td class="cells">events go here</td>
                         </tr>  
                     {% endfor %}
              </tbody>
