--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -67,9 +67,9 @@
                 <tr>
                     {% for cell in row %}
                         {% if cell != 0 %}
-                            <td class="text-center" style="padding: 3em">{{ cell }}</td>
+                            <td class="cells text-center" style="padding: 3em">{{ cell }}</td>
                         {% else %}
-                            <td class="text-center" style="padding: 3em"></td>
+                            <td class="cells text-center" style="padding: 3em"></td>
                         {% endif %}
                     {% endfor %}
                 </tr>
