added arrows.html; refactored base_cal.html to include arrows and calendar heading for all calendars; added calendar heading to day, month, week views

--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -27,6 +27,19 @@
         {% endblock sidebar %}
         <div class="col col-lg min-vh-100">
             {% block calendar %}
+                {% block arrowhead %}
+                    {% include 'calendar/arrows.html' %}
+                {% endblock arrowhead %}
+                {% block datehead %}
+                    <div class="calendar-header">
+                        <div class="row header-title">
+                            <div class="header-text my-3">
+                                {% block date %}
+                                {% endblock date %}
+                            </div>
+                        </div>
+                    </div>
+                {% endblock datehead %}
             {% endblock calendar %}
         </div>
     </div>
