--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -17,23 +17,16 @@
 {%  endblock side_content %}
 {% block calendar %}
 <div class="container-md my-2">
-    <div class="calendar-header">
-        <button type="button" class="btn btn-info" id="prev">
-            <i class="bi bi-arrow-left"></i>
-        </button>
-        <button type="button" class="btn btn-info" id="next">
-            <i class="bi bi-arrow-right"></i>
-        </button>
-        <div class="row header-title">
-            <div class="header-text my-3">
-                <h1 id="date" class = text-center></h1>
-            </div>
-        </div>
-    </div>
-    <div class="calendar-content">
+    {% block arrowhead %}
+        {{ super() }}
+    {% endblock arrowhead %}
+    {% block date %}
+        <h1 id="date" class = text-center></h1>
+    {% endblock date %}
+    <div class="calendar-content mt-3">
         Show Full Calendar
         <table id="calendar-table" class="table table-bordered table-hover">
-            <thead class="table-dark text-center">
+            <thead class="table-primary text-center">
                 <tr>
                     <th><h3>Time</h3></th>
                     <th><h3>Events</h3></th>
