--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -12,7 +12,7 @@
     <p class="text-center text-light">
         {{ month }} {{ year }}
     </p>
-    <div class="container">
+    <div>
         <table id="calendar-table" class="table">
             <thead class="text-light">
             <tr>
@@ -49,7 +49,7 @@
         <div class="calendar-header">
             <div class="row header-title">
                 <div class="header-text my-3">
-                    <h1 id="date" class="text-center"> {{ month }} - {{ year }}</h1>
+                    <h1 id="date" class="text-center"> {{ month }}, {{ year }}</h1>
                 </div>
             </div>
         </div>
