--- a/flaskr/templates/calendar/arrows.html
+++ b/flaskr/templates/calendar/arrows.html
@@ -1,8 +1,10 @@
 <div class="justify-content-between mt-3">
-    <button type="button" class="btn btn-light float-start" data-bs-toggle="tooltip" data-bs-placement="right" title="Previous Week" id="prev">
+    <button type="button" class="btn btn-light float-start" data-bs-toggle="tooltip" data-bs-placement="right"
+            title="Previous" id="prev">
         <i class="bi bi-chevron-left" style="font-weight: bolder; font-size: 1.5rem"></i>
     </button>
-    <button type="button" class="btn btn-light float-end" data-bs-toggle="tooltip" data-bs-placement="left" title="Next Week" id="next">
+    <button type="button" class="btn btn-light float-end" data-bs-toggle="tooltip" data-bs-placement="left"
+            title="Next" id="next">
         <i class="bi bi-chevron-right" style="font-weight: bolder; font-size: 1.5rem"></i>
     </button>
 </div>
