--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -1,12 +1,12 @@
 {% extends 'base_cal.html' %}
-<html lang="en">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 {% block head %}
     {{ super() }}
-    {% block title %}
-    {% endblock %}
+    <title>
+        {%block title%}
+             Month
+        {%endblock title%}
+    </title>
 {% endblock head %}
 {% block view %}
     <p class="text-center text-light">
@@ -50,7 +50,7 @@
             {{ super() }}
         {% endblock arrowhead %}
         {% block date %}
-            <h1 id="date" class="text-center"> {{ month }} - {{ year }}</h1>
+            <h1 id="date" class="text-center"> {{ month }} {{ year }}</h1>
         {% endblock date %}
         <div class="container">
             <table id="calendar-table" class="table table-bordered table-hover">
