--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -42,7 +42,12 @@
     </h3>
 {% endblock %}
 {% block side_content %}
-
+    <form class="sm-form" method="post">
+        <div class="file-field">
+            <input type="file" class="form-control btn btn-info">
+            <input type="submit" class="form-control btn btn-info">
+        </div>
+    </form>
 {%  endblock side_content %}
 {% block calendar %}
     <div class="container-md my-2">
