removed year link from navbar; fixed previous arrow logic for week view

--- a/flaskr/templates/calendar/arrows.html
+++ b/flaskr/templates/calendar/arrows.html
@@ -1,5 +1,6 @@
 <div class="justify-content-between mt-3">
-    <button type="button" class="btn btn-light float-start" data-bs-toggle="tooltip" data-bs-placement="right"
+    <form method="POST">
+    <button type="submit" class="btn btn-light float-start" data-bs-toggle="tooltip" data-bs-placement="right"
             title="Previous" id="prev">
         <i class="bi bi-chevron-left" style="font-weight: bolder; font-size: 1.5rem"></i>
     </button>
@@ -7,4 +8,5 @@
             title="Next" id="next">
         <i class="bi bi-chevron-right" style="font-weight: bolder; font-size: 1.5rem"></i>
     </button>
+    </form>
 </div>
