added check for which arrow is clicked on the weekly view

--- a/flaskr/templates/calendar/arrows.html
+++ b/flaskr/templates/calendar/arrows.html
@@ -1,10 +1,10 @@
 <div class="justify-content-between mt-3">
     <form method="POST">
-    <button type="submit" class="btn btn-light float-start" data-bs-toggle="tooltip" data-bs-placement="right"
+    <button type="submit" name="move" value="prev" class="btn btn-light float-start" data-bs-toggle="tooltip" data-bs-placement="right"
             title="Previous" id="prev">
         <i class="bi bi-chevron-left" style="font-weight: bolder; font-size: 1.5rem"></i>
     </button>
-    <button type="button" class="btn btn-light float-end" data-bs-toggle="tooltip" data-bs-placement="left"
+    <button type="button" name="move" value="next" class="btn btn-light float-end" data-bs-toggle="tooltip" data-bs-placement="left"
             title="Next" id="next">
         <i class="bi bi-chevron-right" style="font-weight: bolder; font-size: 1.5rem"></i>
     </button>
