--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -11,7 +11,7 @@
     </h3>
 {% endblock view %}
 {% block side_content %}
-
+{{ super() }}
 {% endblock side_content %}
 {% block calendar %}
     <div class="container-fluid mt-4">
