added file upload, needs to talk to DB still, fixed layouts

--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -9,6 +9,9 @@
     {% endblock %}
 {% endblock head %}
 {% block view %}
+    <h3 class="text-center mb-4">
+        Month
+    </h3>
     <p class="text-center text-light">
         {{ month }} {{ year }}
     </p>
