--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -8,12 +8,12 @@
     {%endblock title%}   
 {%endblock head %}
 {% block view %}
-<h3 class="justify-content-center">
-    Day
-</h3>
+    <h3 class="text-center mb-4">
+        Day
+    </h3>
 {% endblock %}
 {% block side_content %}
-
+{{ super() }}
 {%  endblock side_content %}
 {% block calendar %}
 <div class="container-md my-2">
