--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -6,7 +6,7 @@
     {% endblock %}
 {% endblock head%}
 {% block view %}
-    <h3 class="text-center">
+    <h3 class="text-center mb-4">
         Week
     </h3>
 {% endblock view %}
