--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -34,6 +34,51 @@
                         </div>
                     </div>
                 {% endblock datehead %}
+                {% block modals %}
+                    <div class="modal fade" id="event-modal" tabindex="-1" role="dialog" aria-labelledby="event-modal-label"
+                         aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="event-modal-label">Event</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="form-group">
+                                        <label for="event-name">Name</label>
+                                        <input type="text" class="form-control" id="event-name" placeholder="Name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="event-description">Description</label>
+                                        <textarea class="form-control" id="event-description" rows="3"></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="event-start-date">Start Date</label>
+                                        <input type="date" class="form-control" id="event-start-date">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="event-start-time">Start Time</label>
+                                        <input type="time" class="form-control" id="event-start-time">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="event-end-date">End Date</label>
+                                        <input type="date" class="form-control" id="event-end-date">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="event-end-time">End Time</label>
+                                        <input type="time" class="form-control" id="event-end-time">
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary" id="event-save">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endblock modals %}
             {% endblock calendar %}
         </div>
     </div>
@@ -41,5 +86,5 @@
 
 {% block scripts %}
     {{ super() }}
-    <script src="{{ url_for('static', filename = 'javascript/calendar/cells.js')}}"></script>
+    <!-- <script src="{{ url_for('static', filename = 'javascript/calendar/cells.js')}}"></script> -->
 {% endblock scripts %}
