--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -14,7 +14,7 @@
     </h3>
 {% endblock view %}
 {% block side_content %}
-
+    {{super()}}
 {% endblock side_content %}
 {% block calendar %}
     <div class="container-fluid my-2">
@@ -66,6 +66,5 @@
 {% endblock calendar %}
 {% block scripts %}
     {{ super() }}
-    <script src="{{ url_for('static', filename = 'javascript/navbar/highlight.js')}}"></script>
     <script>makeActive("week")</script>
 {% endblock scripts %}
