--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -14,6 +14,10 @@
                             <h3>Base Calendar</h3>
                         {% endblock %}
                         {% block side_content %}
+                            <h3 class="text-center text-light">
+                                Options
+                            </h3>
+                            {% include 'calendar/friend-button.html' %}
                         {% endblock side_content %}
                     </div>
                 </div>
@@ -42,4 +46,6 @@
 {% block scripts %}
     {{ super() }}
     <script src="{{ url_for('static', filename = 'javascript/calendar/cells.js')}}"></script>
+    <script src = "{{ url_for('static', filename = 'javascript/calendar/friendButton.js')}}"></script>
+    <script src="{{ url_for('static', filename = 'javascript/navbar/highlight.js')}}"></script>
 {% endblock scripts %}
