--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -47,9 +47,9 @@
                                     {% for event in events %}
                                         {% if (event[2] == month or event[7] == month) and (event[1] == year or event[6] == year) %}
                                             {% if event[3] == date and event[4] == hour %}
-                                                <div class="small text-wrap bg-info bg-opacity-50 rounded-pill"
+                                                <div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
                                                      data-bs-target="#event-modal" data-toggle="modal"
-                                                     id="cell:{{ day }}-{{ date }}-{{ hour }}">
+                                                     id="cell:{{ date }}-{{ month }}-{{ year }}-{{ hour }}">
                                                     {{ event[0] }}
                                                 </div>
                                             {% endif %}
