--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -52,37 +52,38 @@
                                         <span aria-hidden="true"></span>
                                     </button>
                                 </div>
-                                <form method="POST">
+                                <form name="event-form" method="POST">
                                     <div class="modal-body">
-                                        <div class="form-group form">
+                                        <div class="form-group">
                                             <label class="form-label" for="event-name">Title</label>
-                                            <input type="text" class="form-control" id="event-name" placeholder="Name"
-                                                   required>
+                                            <input type="text" name="event-title" class="form-control" id="event-name"
+                                                   placeholder="Name" required>
                                         </div>
                                         <div class="form-group">
                                             <label class="form-label" for="event-description">Description</label>
-                                            <textarea class="form-control" id="event-description" rows="3" required>
+                                            <textarea type="text" name="event-desc" class="form-control" id="event-description" rows="3">
                                             </textarea>
                                         </div>
                                         <div class="form-group">
                                             <label class="form-label" for="event-start-date">Start Date</label>
-                                            <input type="date" class="form-control" id="event-start-date" required>
+                                            <input type="date" name="start-date" class="form-control" id="event-start-date" required>
                                         </div>
                                         <div class="form-group">
                                             <label class="form-label" for="event-start-time">Start Time</label>
-                                            <input type="time" class="form-control" id="event-start-time" required>
+                                            <input type="time" name="start-time" class="form-control" id="event-start-time" required>
                                         </div>
                                         <div class="form-group">
                                             <label class="form-label" for="event-end-date">End Date</label>
-                                            <input type="date" class="form-control" id="event-end-date" required>
+                                            <input type="date" name="end-date" class="form-control" id="event-end-date" required>
                                         </div>
                                         <div class="form-group">
                                             <label class="form-label" for="event-end-time">End Time</label>
-                                            <input type="time" class="form-control" id="event-end-time" required>
+                                            <input type="time" name="end-time" class="form-control" id="event-end-time" required>
                                         </div>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="submit" class="btn btn-primary" id="event-save">Save</button>
+                                        <button type="submit" name="event-save" value="save" class="btn btn-primary"
+                                                id="event-save">Save</button>
                                     </div>
                                 </form>
                             </div>
