--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -42,53 +42,7 @@
                     </div>
                 {% endblock datehead %}
                 {% block modals %}
-                    <div class="modal fade" id="event-modal" tabindex="-1" role="dialog" aria-labelledby="event-modal-label"
-                         aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title text-center" id="event-modal-label">Event</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true"></span>
-                                    </button>
-                                </div>
-                                <form name="event-form" method="POST">
-                                    <div class="modal-body">
-                                        <div class="form-group">
-                                            <label class="form-label" for="event-name">Title</label>
-                                            <input type="text" name="event-title" class="form-control" id="event-name"
-                                                   placeholder="Name" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="form-label" for="event-description">Description</label>
-                                            <textarea type="text" name="event-desc" class="form-control" id="event-description" rows="3">
-                                            </textarea>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="form-label" for="event-start-date">Start Date</label>
-                                            <input type="date" name="start-date" class="form-control" id="event-start-date" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="form-label" for="event-start-time">Start Time</label>
-                                            <input type="time" name="start-time" class="form-control" id="event-start-time" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="form-label" for="event-end-date">End Date</label>
-                                            <input type="date" name="end-date" class="form-control" id="event-end-date" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="form-label" for="event-end-time">End Time</label>
-                                            <input type="time" name="end-time" class="form-control" id="event-end-time" required>
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="submit" name="event-save" value="save" class="btn btn-primary"
-                                                id="event-save">Save</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                    {% include 'calendar/event_modal.html' %}
                 {% endblock modals %}
             {% endblock calendar %}
         </div>
