--- a/flaskr/templates/calendar/event_modal.html
+++ b/flaskr/templates/calendar/event_modal.html
@@ -12,8 +12,8 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label class="form-label" for="event-name">Title</label>
-                        <input type="text" name="event-title" class="form-control" id="event-name"
-                               placeholder="Name" required>
+                        <input name="event-title" class="form-control" id="event-name"
+                               placeholder="Name" required autofocus>
                     </div>
                     <div class="form-group">
                         <label class="form-label" for="event-description">Description</label>
