--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -21,6 +21,7 @@
                                     <input type="submit" class="form-control btn btn-info m-1" value="Upload">
                                 </div>
                             </form>
+                            {% include 'calendar/friend_button.html' %}
                         {% endblock side_content %}
                     </div>
                 </div>
