--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -21,7 +21,15 @@
         {{ super() }}
     {% endblock arrowhead %}
     {% block date %}
-        <h1 id="date" class = text-center>{{ cal.month_name[month] }} {{ day }} {{ year }}</h1>
+        {% if day == 1 or day == 21 or day == 31%}
+            <h1 id="date" class = text-center>{{ cal.month_name[month] }} {{ day }}st, {{ year }}</h1>
+        {% elif day == 2 or day == 22%}
+            <h1 id="date" class = text-center>{{ cal.month_name[month] }} {{ day }}nd, {{ year }}</h1>
+        {% elif day == 3 or day == 23%}
+            <h1 id="date" class = text-center>{{ cal.month_name[month] }} {{ day }}rd, {{ year }}</h1>
+        {% else %}
+            <h1 id="date" class = text-center>{{ cal.month_name[month] }} {{ day }}th, {{ year }}</h1>
+        {% endif %}
     {% endblock date %}
     <div class="calendar-content mt-3">
         <table id="calendar-table" class="table table-bordered table-hover">
