--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -14,13 +14,7 @@
                             <h3>Base Calendar</h3>
                         {% endblock %}
                         {% block side_content %}
-                            <form class="sm-form" method="post" enctype="multipart/form-data">
-                                <div class="file-field">
-                                    <label class="m-1">Upload Schedule</label>
-                                    <input type="file" name="upload_schedule" class="form-control m-1 btn btn-info">
-                                    <input type="submit" class="form-control btn btn-info m-1" value="Upload">
-                                </div>
-                            </form>
+                            {% include 'calendar/upload.html' %}
                         {% endblock side_content %}
                     </div>
                 </div>
