--- a/flaskr/templates/calendar/event_modal.html
+++ b/flaskr/templates/calendar/event_modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="event-modal" tabindex="-1" role="dialog" aria-labelledby="event-modal-label"
+<div class="modal fade" id="event-modal" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="event-modal-label"
                          aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -21,6 +21,9 @@
                         </textarea>
                     </div>
                     <div class="form-group">
+                        <label class="form-label" for="event-location">Location</label>
+                        <input type="text" name="event-location" class="form-control" id="event-location" >
+                    <div class="form-group">
                         <label class="form-label" for="event-start-date">Start Date</label>
                         <input type="date" name="start-date" class="form-control" id="event-start-date" required>
                     </div>
@@ -35,6 +38,14 @@
                     <div class="form-group">
                         <label class="form-label" for="event-end-time">End Time</label>
                         <input type="time" name="end-time" class="form-control" id="event-end-time" required>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-select" aria-label="Recurrence">
+                          <option selected>Select Recurrence</option>
+                          <option value="1">Daily</option>
+                          <option value="2">Weekly</option>
+                          <option value="3">Monthly</option>
+                        </select>
                     </div>
                 </div>
                 <div class="modal-footer">
