added structure for uploading and downloading

--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -19,6 +19,7 @@
                             </h3>
                             {% include 'calendar/friend-button.html' %}
                             {% include 'calendar/upload.html' %}
+                            {% include 'calendar/export.html' %}
 
                         {% endblock side_content %}
                     </div>
