--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -20,7 +20,6 @@
                             {% include 'calendar/friend-button.html' %}
                             {% include 'calendar/upload.html' %}
                             {% include 'calendar/export.html' %}
-
                         {% endblock side_content %}
                     </div>
                 </div>
@@ -28,6 +27,16 @@
         {% endblock sidebar %}
         <div class="col col-lg min-vh-100">
             {% block calendar %}
+
+                {% block messages %}
+                {% with m = get_flashed_messages() %}
+                    {% if m %}
+                        {% for i in m %}
+                            <h4 class="text-center text-danger">{{ i }}</h4>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+                {% endblock messages %}
                 {% block arrowhead %}
                     {% include 'calendar/arrows.html' %}
                 {% endblock arrowhead %}
